Opened 12 years ago

Closed 12 years ago

#3212 closed defect (fixed)

initial seek in MSVIDEO1 causes failure to display on some avi files

Reported by: DonMoir Owned by:
Priority: normal Component: undetermined
Version: unspecified Keywords:
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description (last modified by Elon Musk)

Same as ticket #1273 but different codec ID.

If you do a seek prior to calling avcodec_decode_video2 at least once, then you will no longer get any video stream packets with the attached files. The seek works fine after you call avcodec_decode_video2 but not if you tried to seek prior to this. Reading a first video packet is not enough.

Use this sample to test.

*http://sms.pangolin.com/temp/EVBPIC.AVI

Change History (12)

comment:1 by Carl Eugen Hoyos, 12 years ago

Resolution: duplicate
Status: newclosed

comment:2 by DonMoir, 12 years ago

If this is dup of 1273 why is 1273 closed and set to fixed ?

comment:3 by Carl Eugen Hoyos, 12 years ago

Why do you think this is a duplicate of ticket #1273?
And - much more important - what did you search for on the bug tracker before opening this ticket? The file name? The codec name? I am sure you do always search the tracker before opening a new ticket, or don't you?

comment:4 by DonMoir, 12 years ago

What ticket do you think it is a duplicate of ?

comment:5 by DonMoir, 12 years ago

I suspect you only searched for filename and assumed it was dup of #296 but I already explained in #1273 comment 13 that it is not the same issue.

In comment 10 of #1273 you suggest I open a new ticket on it.

Now would like to know where you came up with duplicate if neither 1273 or 296.

comment:6 by Carl Eugen Hoyos, 12 years ago

I suggest you reopen this ticket once ticket #296 is fixed.

comment:7 by DonMoir, 12 years ago

Ticket #296 has nothing to do at all with this ticket for gods sake. Ticket #296 is just a search to keyframe versus exact time and that is just inherent in ffmpeg. Ticket #296 is not even a bug. That issue is more of an application issue and seek works perfectly fine for me on that file other than the no display part if you seek before first decode.

Repeat, this issue (3212 and 1273) is because any attempt to seek before the first avcodec_decode_video2 even to initial keyframe, causes failure to display. Completely different issues.

comment:8 by DonMoir, 12 years ago

Resolution: duplicate
Status: closedreopened

comment:9 by Carl Eugen Hoyos, 12 years ago

Resolution: duplicate
Status: reopenedclosed

comment:10 by DonMoir, 12 years ago

Don't ever call anybody rude Carl. It makes you a hypocrite as well. So anyway, ignore it and don't fix according to Carl.

comment:11 by Elon Musk, 12 years ago

Description: modified (diff)
Resolution: duplicate
Status: closedreopened

comment:12 by Michael Niedermayer, 12 years ago

Reproduced by developer: set
Resolution: fixed
Status: reopenedclosed
Note: See TracTickets for help on using tickets.