avcodec/msvideo1: Fix palette in case of seek before decode

Fixes Ticket3212

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>